[metadata]
name = enzo
version = attr: enzo.__version__
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = A Python implementation for networks of nodes.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
project_urls = 
	Code = https://github.com/thomasbreydo/enzo
# 	Documentation = https://enzo.readthedocs.io
classifiers = 
	# Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires = 
	numpy==1.19.0
include_package_data = true

[bumpversion]
current_version = 0.0.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
    {major}.{minor}.{patch}-{release}{build}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values =
    dev
    prod

[bumpversion:file:enzo/__init__.py]