[metadata]
name = enzo
version = attr: enzo.__version__
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = A Python implementation for networks of nodes.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
project_urls = 
	Code = https://github.com/thomasbreydo/enzo
classifiers = 
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires = 
	numpy==1.19.0
include_package_data = true
