[metadata]
name = enzo
version = attr: enzo.__version__
author = Thomas Breydo
author_email = tbreydo@gmail.com
description = A neural network library designed from scratch.
long_description = file: docs/README.rst
long_description_content_type = text/x-rst
url = https://github.com/thomasbreydo/enzo
project_urls = 
	Code = https://github.com/thomasbreydo/enzo
# 	Documentation = https://enzo.readthedocs.io
classifiers = 
	Development Status :: 1 - Planning
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = src